--- a/index.html
+++ b/index.html
@@ -396,17 +396,17 @@
                 <div class="container text-center">
                   <div class="row">
                     <div class="col">
-                      <a href=""><img src="../static/icons/linkedin.png" alt=""></a>
+                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="../static/icons/linkedin.png" alt=""></a>
                       
                     </div>
                     <div class="col">
-                      <a href=""><img src="../static/icons/github.png" alt=""></a>
+                      <a href="https://github.com/vaibhav-bisen"><img src="../static/icons/github.png" alt=""></a>
                     </div>
                     <div class="col">
-                      <a href=""><img src="../static/icons/twitter.png" alt=""></a>
+                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="../static/icons/twitter.png" alt=""></a>
                     </div>
                     <div class="col">
-                      <a href=""><img src="../static/icons/instagram.png" alt=""></a>
+                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="../static/icons/instagram.png" alt=""></a>
                     </div>
                   </div>
                 </div>
