--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../static/CSS/style.css" />
-    <link rel="stylesheet" href="../static/CSS/resume.css" />
-    <link rel="stylesheet" href="../static/CSS/touch.css" />
+    <link rel="stylesheet" href="static/CSS/style.css" />
+    <link rel="stylesheet" href="static/CSS/resume.css" />
+    <link rel="stylesheet" href="static/CSS/touch.css" />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -68,21 +68,21 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="../static/images/img2.jpg"
+                  src="static/images/img2.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="../static/images/img1.jpg"
+                  src="static/images/img1.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="../static/images/img3.jpg"
+                  src="static/images/img3.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -396,17 +396,17 @@
                 <div class="container text-center">
                   <div class="row">
                     <div class="col">
-                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="../static/icons/linkedin.png" alt=""></a>
+                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="static/icons/linkedin.png" alt=""></a>
                       
                     </div>
                     <div class="col">
-                      <a href="https://github.com/vaibhav-bisen"><img src="../static/icons/github.png" alt=""></a>
+                      <a href="https://github.com/vaibhav-bisen"><img src="static/icons/github.png" alt=""></a>
                     </div>
                     <div class="col">
-                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="../static/icons/twitter.png" alt=""></a>
+                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="static/icons/twitter.png" alt=""></a>
                     </div>
                     <div class="col">
-                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="../static/icons/instagram.png" alt=""></a>
+                      <a href="https://www.linkedin.com/in/vaibhav-bisen-90144a171/"><img src="static/icons/instagram.png" alt=""></a>
                     </div>
                   </div>
                 </div>
