--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <div class="timeline-item clearfix">
                 <div class="left-part">
                   <h5 class="item-period">2017</h5>
-                  <span class="item-company">Nagpur Boadrd</span>
+                  <span class="item-company">Nagpur Board</span>
                 </div>
                 <div class="divider"></div>
                 <div class="right-part">
@@ -454,7 +454,7 @@
 
     </section>
 
-    <!-- Body End -->
+    <!------- Body End ---------->
 
     <!-- Footer -->
     <footer>
@@ -464,6 +464,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
-    ></script>
+    ></script >
   </body>
 </html>
